# Apprentice

./: LICENSE  README.md  pyproject.toml
apprentice/: server.py  worker.py  worktree.py
